tests/ui/resolve/issue-80079.stderr
error[E0425]: cannot find value `Foo` in this scope
  --> $DIR/issue-80079.rs:11:13
   |
LL |     let _ = Foo;
   |             ^^^ not found in this scope

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0425`.
